Added endpoints for answers and stats
