# components/dms2122backend/dms2122backend/openapi/spec.yml
@@ -50,9 +50,11 @@ paths:
         "200":
           description: Success fetch of user stats.
           content:
-            "text/plain":
+            application/json:
               schema:
-                type: string
+                $ref: "#/components/schemas/UserStats"
+              example:
+                $ref: "#/components/examples/UserStats"
         "400":
           description: A user was not provided.
           content:
@@ -65,10 +67,137 @@ paths:
             "text/plain":
               schema:
                 type: string
-
+      tags:
+        - stats
+      security:
+        - user_token: []
+          api_key: []
     patch:
-      summary: Updates the user stats
-      operationId: dms2122backend.presentation.rest.stats.post_stats
+      summary: Updates the user stats.
+      operationId: dms2122backend.presentation.rest.stats.update_stats
+      parameters:
+        - name: username
+          in: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        description: Stats to update
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/UserStats"
+            example:
+              $ref: "#/components/examples/UserStats"
+      responses:
+        "200":
+          description: Success update of user stats.
+          content:
+            "text/plain":
+              schema:
+                type: string
+        "403":
+          description: The requestor has no privilege to update user stats.
+          content:
+            "text/plain":
+              schema:
+                type: string
+        "400":
+          description: There was an error while updating user stats.
+          content:
+            "text/plain":
+              schema:
+                type: string
+      tags:
+        - stats
+      security:
+        - user_token: []
+          api_key: []
+
+  /user/{username}/questions/answer/{id}:
+    get:
+      summary: Gets the question answer
+      operationId: dms2122backend.presentation.rest.user.get_question_answer
+      parameters:
+        - name: username
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: Success fetch of user answer for specific question.
+          content:
+            "text/plain":
+              schema:
+                type: string
+        "403":
+          description: The requestor has no privilege to get the answer
+          content:
+            "text/plain":
+              schema:
+                type: string
+        "400":
+          description: There was an error while getting the answer.
+          content:
+            "text/plain":
+              schema:
+                type: string
+      tags:
+        - answers
+      security:
+        - user_token: []
+          api_key: []
+
+    post:
+      summary: Sets the question answer
+      operationId: dms2122backend.presentation.rest.user.post_question_answer
+      parameters:
+        - name: username
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: Success set of user answer.
+          content:
+            "text/plain":
+              schema:
+                type: string
+        "403":
+          description: The requestor has no privilege to set the answer.
+          content:
+            "text/plain":
+              schema:
+                type: string
+        "400":
+          description: There was an error while setting the answer.
+          content:
+            "text/plain":
+              schema:
+                type: string
+      tags:
+        - answers
+      security:
+        - user_token: []
+          api_key: []
+
+  /user/{username}/questions/answered:
+    get:
+      summary: Gets user answered questions
+      operationId: dms2122backend.presentation.rest.user.get_answered_questions
       parameters:
         - name: username
           in: path
@@ -77,91 +206,68 @@ paths:
             type: string
       responses:
         "200":
-          description: A test message
+          description: OK Response, returns user's answered questions
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/QuestionResponse"
+              example:
+                $ref: "#/components/examples/QuestionResponse"
+        "403":
+          description: The requestor has no privilege to get the questions.
           content:
             "text/plain":
               schema:
                 type: string
+        "400":
+          description: There was an error while getting the questions.
+          content:
+            "text/plain":
+              schema:
+                type: string
+      tags:
+        - questions
+      security:
+        - user_token: []
+          api_key: []
 
-  # /user/{username}/questions/answer/{id}:
-  #   get:
-  #     summary: Gets the question answer
-  #     operationId: dms2122backend.presentation.rest.test.test
-  #     parameters:
-  #       - name: username
-  #         in: path
-  #         required: true
-  #         schema:
-  #           type: string
-  #       - name: id
-  #         in: path
-  #         required: true
-  #         schema:
-  #           type: string
-  #     responses:
-  #       "200":
-  #         description: A test message
-  #         content:
-  #           "text/plain":
-  #             schema:
-  #               type: string
-  #   patch:
-  #     summary: Sets the question answer
-  #     operationId: dms2122backend.presentation.rest.test.test
-  #     parameters:
-  #       - name: username
-  #         in: path
-  #         required: true
-  #         schema:
-  #           type: string
-  #       - name: id
-  #         in: path
-  #         required: true
-  #         schema:
-  #           type: string
-  #     responses:
-  #       "200":
-  #         description: A test message
-  #         content:
-  #           "text/plain":
-  #             schema:
-  #               type: string
+  /user/{username}/questions/unanswered:
+    get:
+      summary: Gets user unanswered questions
+      operationId: dms2122backend.presentation.rest.user.get_unanswered_questions
+      parameters:
+        - name: username
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: OK Response, returns user's unanswered questions
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/QuestionResponse"
+              example:
+                $ref: "#/components/examples/QuestionResponse"
+        "403":
+          description: The requestor has no privilege to get the questions.
+          content:
+            "text/plain":
+              schema:
+                type: string
+        "400":
+          description: There was an error while getting the questions.
+          content:
+            "text/plain":
+              schema:
+                type: string
+      tags:
+        - questions
+      security:
+        - user_token: []
+          api_key: []
 
-  # /user/{username}/questions/answered:
-  #   get:
-  #     summary: Gets a user stats
-  #     operationId: dms2122backend.presentation.rest.test.test
-  #     parameters:
-  #       - name: username
-  #         in: path
-  #         required: true
-  #         schema:
-  #           type: string
-  #     responses:
-  #       "200":
-  #         description: A test message
-  #         content:
-  #           "text/plain":
-  #             schema:
-  #               type: string
-
-  # /user/{username}/questions/unanswered:
-  #   get:
-  #     summary: Gets a user stats
-  #     operationId: dms2122backend.presentation.rest.test.test
-  #     parameters:
-  #       - name: username
-  #         in: path
-  #         required: true
-  #         schema:
-  #           type: string
-  #     responses:
-  #       "200":
-  #         description: A test message
-  #         content:
-  #           "text/plain":
-  #             schema:
-  #               type: string
   /question/all:
     get:
       summary: Retrieves every single stored questions (This should be paginated)
@@ -212,13 +318,13 @@ paths:
         "403":
           description: The requestor has no privilege to add a question.
           content:
-            'text/plain':
+            "text/plain":
               schema:
                 type: string
-        '400':
+        "400":
           description: There was an error while creating the question.
           content:
-            'text/plain':
+            "text/plain":
               schema:
                 type: string
       tags:
@@ -226,7 +332,6 @@ paths:
       security:
         - user_token: []
           api_key: []
-
 
   /question/{id}:
     get:
@@ -251,13 +356,13 @@ paths:
         "403":
           description: The requestor has no privilege to add a question.
           content:
-            'text/plain':
+            "text/plain":
               schema:
                 type: string
-        '400':
+        "400":
           description: There was an error while creating the question.
           content:
-            'text/plain':
+            "text/plain":
               schema:
                 type: string
       tags:
@@ -265,6 +370,7 @@ paths:
       security:
         - user_token: []
           api_key: []
+
     patch:
       summary: Updates a question by ID
       operationId: dms2122backend.presentation.rest.question.editQ
@@ -298,7 +404,6 @@ paths:
         - user_token: []
           api_key: []
 
-
 components:
   schemas:
     Question:
@@ -326,9 +431,8 @@ components:
         public:
           type: boolean
 
-
     QuestionResponse:
-      allOf: 
+      allOf:
         - $ref: "#/components/schemas/Question"
       type: object
       properties:
@@ -344,8 +448,20 @@ components:
               resCount:
                 type: integer
 
-        
-        
+    UserStats:
+      type: object
+      properties:
+        userId:
+          type: integer
+        nAnswered:
+          type: integer
+          minimum: 0
+        nCorrect:
+          type: integer
+          minimum: 0
+        score:
+          type: number
+
   examples:
     Question:
       summary: "Question Example"
@@ -353,13 +469,12 @@ components:
         title: Titulo
         statement: ¿Cuánto es 1 + 1?
         correctOption: 2
-        incorrectOptions: [1,3]
+        incorrectOptions: [1, 3]
         imageUrl: ""
         score: 1
         penalty: 0.2
         public: true
-      
-      
+
     QuestionResponse:
       summary: "Question Example"
       value:
@@ -367,14 +482,21 @@ components:
         title: Titulo
         statement: ¿Cuánto es 1 + 1?
         correctOption: "2"
-        incorrectOptions: ["1","3"]
+        incorrectOptions: ["1", "3"]
         imageUrl: ""
         score: 1
         penalty: 0.2
         public: true
-        userAns: [{"1": 0}, {"3": 5}, {"2": 250} ]      
+        userAns: [{ "1": 0 }, { "3": 5 }, { "2": 250 }]
 
-    
+    UserStats:
+      summary: "User Stats Example"
+      value:
+        userId: 1
+        nAnswered: 3
+        nCorrect: 2
+        score: 0.6
+
   securitySchemes:
     user_token:
       type: http
